<resources>
    <string name="app_name">Explore India</string>

    <string name="hello_blank_fragment">Random fragment</string>

    <!--Splash Screen Strings-->
    <string name="readPrivacy"><u>Read our privacy and policy</u></string>

    <!--Places Details Strings-->
    <string name="taj_mahal">Taj Mahal</string>
    <string name="dummy_place_description">The Taj Mahal was commissioned by Shah Jahan in 1631, to be built in the memory of his wife Mumtaz Mahal, a Persian princess who died giving birth to their 14th child, Gauhara Begum.[6] Construction of the Taj Mahal began in 1632.[7] The imperial court documenting Shah Jahan\'s grief after the death of Mumtaz Mahal illustrate the love story held as the inspiration for Taj Mahal.[8][9] The principal mausoleum was completed in 1643 and the surrounding buildings and garden were finished about five years later.[10].
    The Taj Mahal incorporates and expands on design traditions of Persian and earlier Mughal architecture. Specific inspiration came from successful Timurid and Mughal buildings including the Gur-e Amir (the tomb of Timur, progenitor of the Mughal dynasty, in Samarkand),[12] Humayun's Tomb, Itmad-Ud-Daulah's Tomb (sometimes called the Baby Taj), and Shah Jahan's own Jama Masjid in Delhi. While earlier Mughal buildings were primarily constructed of red sandstone, Shah Jahan promoted the use of white marble inlaid with semi-precious stones. Buildings under his patronage reached new levels of refinement.</string>
    <string name="places_details_btn_share">Place details share button</string>
    <string name="places_details_btn_favourite">Places details favourite button</string>
    <string name="places_details_btn_map_location">Places details map location button</string>


    <!--Login Screen Strings-->
    <string name="login_tv_app_title">Explore India</string>
    <string name="login_et_phone_no_hint">Mobile No.</string>
    <string name="login_btn_proceed_label">Proceed</string>
    <string name="login_tv_or_label">Or</string>
    <string name="login_btn_google_login">Sign in with google plus</string>
    <string name="login_btn_skip">SKIP</string>


    <!-- Liked places String -->
    <string name="liked_place_tv_date">Date :</string>
    <string name="liked_place_tv_like">Total Likes :</string>
    <string name="likde_place_tv_name">Name</string>
    <string name="liked_places_list_images">Image</string>
    <string name="liked_places_img_background">Background</string>

    <!--Add Place strings-->
    <string name="place_fragment_title">Add Place</string>
    <string name="add_img_button_description">Add an image</string>
    <string name="place_edittext_hint">Place Title</string>
    <string name="tags_edittext_hint">Tags</string>
    <string name="desctiption_edittext_hint">Description</string>
    <string name="location_edittext_hint">Location</string>
    <string name="submit_button_string">Submit</string>
    <string name="popular_cities">Popular Cities > </string>
    <string name="popular_places">Popular Places > </string>
    <string name="search_places">Search Places</string>


    <!-- String resources for Profile Page Layout -->

    <string name="profile_name">\@vvklingayat</string>
    <string name="content_description_profile">Your Profile Image</string>

    <string name="edit_profile">Edit Profile</string>

    <string name="city_label">City :</string>
    <string name="city">Mumbai</string>

    <string name="state_label">State :</string>
    <string name="state">Maharashtra</string>

    <string name="number_label">Mobile :</string>
    <string name="number">8879495775</string>

    <string name="age_label">Age :</string>
    <string name="age">24</string>

    <string name="my_places_label">My Places</string>

        <!-- String resources for RecyclerView item -->

        <string name="content_description_place">Image of place</string>
        <string name="content_description_place_detail">Details of place</string>

        <string name="place_name_label">Places :</string>
        <string name="place_name">Bandstand</string>

        <string name="state_name_label">State :</string>
        <string name="state_name">Maharashtra</string>

        <string name="city_name_label">City :</string>
        <string name="city_name">Mumbai</string>

        <string name="date_label">Date :</string>
        <string name="date">17&#8211;04&#8211;18</string>

        <!-- End of String resources for RecyclerView item -->

    <!-- End of String resources for Profile Page Layout -->



    <!--Custom Dialog Message Strings-->
    <string name="msg_signing_in">Signing in&#8230;</string>



    <!--Fixed Strings-->
    <string name="country_code">+91</string>

    <!--Menu Strings-->
    <string name="menu_login">Login</string>


    <!--Toast Messages Strings-->
    <string name="msg_login_success">Login Successful!</string>
    <string name="msg_login_failed">Login Failed!</string>
    <string name="msg_invalid_no">Please enter correct number!</string>


</resources>
