<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.home.fragments.profile.UserDetailFragment">

            <TextView
                android:id="@id/profile_tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="22dp"
                android:textColor="@color/textColor"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/profile_name" />

            <TextView
                android:id="@id/profile_btn_edit_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginTop="22dp"
                android:text="@string/edit_profile"
                android:textColor="@color/textColor"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/marginView1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/profile_tv_name" />

            <ImageView
                android:id="@id/profile_img_profile_image"
                android:contentDescription="@string/content_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/marginView1"
                app:srcCompat="@drawable/profile_image" />

            <TextView
                android:id="@id/profile_tv_city_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="44dp"
                android:layout_marginLeft="44dp"
                android:layout_marginTop="16dp"
                android:text="@string/city_label"
                android:textColor="@color/textColor"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@id/profile_img_profile_image"
                app:layout_constraintTop_toBottomOf="@id/marginView1" />

            <TextView
                android:id="@id/profile_tv_state_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/state_label"
                android:textColor="@color/textColor"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@id/profile_tv_city_label"
                app:layout_constraintTop_toBottomOf="@id/profile_tv_city_label" />

            <TextView
                android:id="@id/profile_tv_number_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/number_label"
                android:textColor="@color/textColor"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@id/profile_tv_state_label"
                app:layout_constraintTop_toBottomOf="@id/profile_tv_state_label" />

            <TextView
                android:id="@id/profile_tv_age_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/age_label"
                android:textColor="@color/textColor"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@id/profile_tv_number_label"
                app:layout_constraintTop_toBottomOf="@id/profile_tv_number_label" />

            <TextView
                android:id="@id/profile_tv_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:textColor="@color/textColor"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@id/profile_tv_city_label"
                app:layout_constraintTop_toTopOf="@id/profile_tv_city_label"
                tools:text="@string/city" />

            <TextView
                android:id="@id/profile_tv_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:textColor="@color/textColor"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@id/profile_tv_state_label"
                app:layout_constraintTop_toTopOf="@id/profile_tv_state_label"
                tools:text="@string/state" />

            <TextView
                android:id="@id/profile_tv_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:textColor="@color/textColor"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@id/profile_tv_number_label"
                app:layout_constraintTop_toTopOf="@id/profile_tv_number_label"
                tools:text="@string/number" />

            <TextView
                android:id="@id/profile_tv_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:textColor="@color/textColor"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@id/profile_tv_age_label"
                app:layout_constraintTop_toTopOf="@id/profile_tv_age_label"
                tools:text="@string/age" />

            <View
                android:id="@+id/marginView2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/profile_img_profile_image" />

            <TextView
                android:id="@id/profile_rv_places"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/my_places_label"
                android:textColor="@color/textColor"
                android:textSize="22sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/marginView2" />

            <View
                android:id="@+id/marginView3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@id/profile_rv_places" />

    </android.support.constraint.ConstraintLayout>
</layout>
