<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.udacity.exploreindia.PlaceDetailsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/app_bar"
            layout="@layout/app_bar" />

        <android.support.v4.view.ViewPager
            android:id="@+id/places_details_vp_images"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@+id/app_bar" />

        <LinearLayout
            android:id="@+id/slidrDots"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/places_details_vp_images"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal" />

        <RelativeLayout
            android:id="@+id/subtoolbar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/slidrDots"
            android:layout_margin="10dp">

            <ImageView
                android:id="@+id/places_details_btn_share"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="21dp"
                android:layout_marginRight="21dp"
                android:layout_toLeftOf="@+id/places_details_btn_favourite"
                android:layout_toStartOf="@+id/places_details_btn_favourite"
                android:contentDescription="@string/places_details_btn_share"
                android:padding="10dp"
                android:src="@drawable/ic_share" />

            <ImageView
                android:id="@+id/places_details_btn_favourite"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/places_details_btn_favourite"
                android:padding="10dp"
                android:src="@drawable/ic_favourite" />

            <ImageView
                android:id="@+id/places_details_btn_map_location"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="23dp"
                android:layout_marginStart="23dp"
                android:layout_toEndOf="@+id/places_details_btn_favourite"
                android:layout_toRightOf="@+id/places_details_btn_favourite"
                android:contentDescription="@string/places_details_btn_map_location"
                android:padding="10dp"
                android:src="@drawable/ic_map" />

        </RelativeLayout>

        <android.support.v4.view.ViewPager
            android:id="@+id/places_details_vp_text"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@+id/subtoolbar" />

        <LinearLayout
            android:id="@+id/slidrDotsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/places_details_vp_text"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal" />

    </RelativeLayout>
</ScrollView>

